# omero_download

./: pyproject.toml
config/: omero_au18.toml
omero_download/: main.py
