[project]
name = "omero_download"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.12"
readme = ""
dependencies = [
    "zeroc-ice@https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp311-cp311-manylinux_2_28_x86_64.whl",
    "omero-py",
    "typer",
    "tifffile",
    "shapely",
    "scikit-image",
]